# mproc

./: .gitignore  Cargo.toml  Makefile  README.md  mkdocs.yml  mproc-layout-wip.glade  mproc-layout.glade
.github/workflows/: rust.yml
mkdocs/: GTK3_Windows.md
mkdocs/docs/: developing.md  index.md  structure.md
scripts/windows/: find_and_stop_process_by_pid.ps1
src/: application.rs  command_loader.rs  file_watcher.rs  machine_process.rs  main.rs  main_scene.rs  process_container.rs  process_output_handler.rs  settings.rs  spawn_process.rs  state.rs  styles.rs
src/core/: command_loader.rs  file_watcher.rs  mod.rs  process_handler.rs  process_output_handler.rs  session.rs  settings.rs  spawn_process.rs  state.rs
src/ui/: main_window.rs  mod.rs  mproc_process_container.rs  nav_controls.rs  view_settings.rs
src/ui/gtk/: gtk_mproc_process_container.rs  mod.rs  styles_loader.rs
styles/: styles.css
test-data/: .mproc.win.yml  .mproc.yml
