[package]
name = "mproc"
version = "0.1.0"
authors = ["Dmitriy Dubson <d.dubson@gmail.com>", "TJ Maynes <tj@tjmaynes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.8.1"
glib = "0.9.3"
gio = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
