[package]
name = "mproc"
version = "0.1.0"
authors = ["Dmitriy Dubson <d.dubson@gmail.com>", "TJ Maynes <tj@tjmaynes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.9.0"
gdk = "0.13.0"
glib = "0.10.0"
gio = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
duct = "0.13.4"